testsuite/tests/grammar/invalid_lexers/foo.lkt
import common
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
